--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.html",
   "scripts": {
     "start": "webpack-dev-server --hot --inline --mode development",
-    "prod": "webpack --config=webpack.config.js"
+    "prod": "webpack --config ./webpack.prod.config.js --mode production --output ./docs/main.js"
   },
   "devDependencies": {
     "@types/react": "16.1.0",
@@ -27,14 +27,15 @@
     "sass-loader": "^6.0.7",
     "ts-loader": "^4.1.0",
     "typescript": "^2.7.2",
-    "webpack": "^4.1.1",
-    "webpack-cli": "^2.0.12"
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13"
   },
   "dependencies": {
     "css-loader": "^0.28.11",
     "eslint": "^4.19.0",
+    "html-webpack-plugin": "^3.1.0",
     "moment": "^2.21.0",
-    "react": "^16.2.0",
+    "react": "^16.3.0",
     "react-dom": "^16.2.0",
     "react-slick": "^0.22.3",
     "slick-carousel": "^1.8.1",
