--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prod": "webpack --config ./webpack.prod.config.js --mode production --output ./docs/main.js"
   },
   "devDependencies": {
+    "@types/node": "^9.6.1",
     "@types/react": "16.1.0",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
@@ -38,6 +39,7 @@
     "react": "^16.3.0",
     "react-dom": "^16.2.0",
     "react-slick": "^0.22.3",
+    "react-transition-group": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.20.3",
     "webpack-dev-server": "^3.1.1"
