--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "webpack-cli": "^2.0.13"
   },
   "dependencies": {
+    "@types/react-slick": "^0.23.0",
+    "@types/react-transition-group": "^2.0.9",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.0",
     "html-webpack-plugin": "^3.1.0",
     "moment": "^2.21.0",
     "react": "^16.3.0",
     "react-dom": "^16.2.0",
-    "react-slick": "^0.22.3",
+    "react-slick": "^0.23.1",
     "react-transition-group": "^2.3.0",
     "slick-carousel": "^1.8.1",
     "style-loader": "^0.20.3",
