--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "devDependencies": {
     "@types/node": "^9.6.1",
     "@types/react": "16.1.0",
+    "@types/react-transition-group": "^2.0.9",
     "babel": "^6.23.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "css-loader": "^0.28.11",
+    "eslint": "^4.19.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-loader": "^2.0.0",
     "eslint-plugin-import": "^2.9.0",
@@ -24,26 +27,21 @@
     "eslint-plugin-react": "^7.7.0",
     "eslint-plugin-standard": "^3.0.1",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.1.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.7",
+    "style-loader": "^0.20.3",
     "ts-loader": "^4.1.0",
-    "typescript": "^2.7.2",
-    "webpack": "^4.4.1",
-    "webpack-cli": "^2.0.13"
+    "typescript": "^3.3.3333",
+    "webpack": "^4.29.5",
+    "webpack-cli": "^3.2.3",
+    "webpack-dev-server": "^3.2.0"
   },
   "dependencies": {
-    "@types/react-slick": "^0.23.0",
-    "@types/react-transition-group": "^2.0.9",
-    "css-loader": "^0.28.11",
-    "eslint": "^4.19.0",
-    "html-webpack-plugin": "^3.1.0",
-    "moment": "^2.21.0",
-    "react": "^16.3.0",
-    "react-dom": "^16.2.0",
-    "react-slick": "^0.23.1",
-    "react-transition-group": "^2.3.0",
-    "slick-carousel": "^1.8.1",
-    "style-loader": "^0.20.3",
-    "webpack-dev-server": "^3.1.1"
+    "moment": "^2.24.0",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-responsive-carousel": "^3.1.47",
+    "react-transition-group": "^2.5.3"
   }
 }
