--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
   "compilerOptions": {
     "baseUrl": "./",
-    "module": "es6",
-    "target": "es5",
+    "module": "esNext",
+    "target": "es2015",
     "jsx": "react",
     "allowJs": true,
     "moduleResolution": "node",
@@ -14,6 +14,7 @@
   },
   "exclude": [
     "node_modules",
-    "build"
+    "build",
+    "docs"
   ]
 }
